// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WfModuleHeader Mounts and does not focus 1`] = `
<WfModuleHeader
  focusModule={[MockFunction]}
  isSelected={false}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-module--placeholder mx-auto"
  >
    <div
      className="module-content"
    >
      <div
        className="module-card-header"
      >
        <div
          className="d-flex justify-content-start align-items-center"
        >
          <div
            className="icon-some-icon WFmodule-icon t-vl-gray mr-2"
          />
          <div
            className="t-vl-gray WFmodule-name"
          >
            Some module name
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;

exports[`WfModuleHeader Mounts and focuses 1`] = `
<WfModuleHeader
  focusModule={
    [MockFunction] {
      "calls": Array [
        Array [
          <div
            class="wf-module--placeholder mx-auto"
            data-reactroot=""
          >
            <div
              class="module-content"
            >
              <div
                class="module-card-header"
              >
                <div
                  class="d-flex justify-content-start align-items-center"
                >
                  <div
                    class="icon-some-icon WFmodule-icon t-vl-gray mr-2"
                  />
                  <div
                    class="t-vl-gray WFmodule-name"
                  >
                    Some module name
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
      ],
    }
  }
  isSelected={true}
  moduleIcon="some-icon"
  moduleName="Some module name"
  status="busy"
>
  <div
    className="wf-module--placeholder mx-auto"
  >
    <div
      className="module-content"
    >
      <div
        className="module-card-header"
      >
        <div
          className="d-flex justify-content-start align-items-center"
        >
          <div
            className="icon-some-icon WFmodule-icon t-vl-gray mr-2"
          />
          <div
            className="t-vl-gray WFmodule-name"
          >
            Some module name
          </div>
        </div>
      </div>
    </div>
  </div>
</WfModuleHeader>
`;
